refs #59972 @3h: add drawings of doors based on coordinates and button to collapse drawer