@@ -31,12 +31,12 @@ import java.util.List;
 @Profile("test")
 public class InitializeDatabaseLocal implements InitializingBean {
 
+	private static final Logger LOG = LoggerFactory.getLogger(InitializeDatabaseLocal.class);
 	private final LocationService locationService;
 
 	private final SesamUserService userService;
 	private final PasswordEncoder passwordEncoder;
 
-	private static final Logger LOG = LoggerFactory.getLogger(InitializeDatabaseLocal.class);
 
 
 	public InitializeDatabaseLocal(LocationService locationService, SesamUserService userService,
@@ -83,7 +83,7 @@ public class InitializeDatabaseLocal implements InitializingBean {
 	private List<Location> createLocations() {
 		List<Door> doors = new ArrayList<>();
 		List<Door> doors2 = new ArrayList<>();
-		for(int i = 0, k = 0; i < 60; i++, k += 2) {
+		for (int i = 0, k = 0; i < 60; i++, k += 2) {
 			doors.add(new Door("Door" + i));
 			doors2.add(new Door("D00r" + k));
 		}
@@ -102,11 +102,10 @@ public class InitializeDatabaseLocal implements InitializingBean {
 			rooms.get(i).setCoordinates(roomCoordinates.get(i));
 		}
 
-		List<Coordinate> doorCoordinates = createDoorCoordinates(jsonContent);
+		List<List<Coordinate>> doorCoordinates = createDoorCoordinates(jsonContent);
 
 		for (int i = 0; i < doorCoordinates.size(); i++) {
-			Door door = new Door(doorCoordinates.get(i));
-			rooms.get(i).setDoors(Collections.singletonList(door));
+			rooms.get(i).setDoors(List.of(new Door(doorCoordinates.get(i))));
 		}
 
 		List<Floor> floors = new ArrayList<>();
@@ -131,8 +130,8 @@ public class InitializeDatabaseLocal implements InitializingBean {
 
 	private String readJsonFile() {
 		try {
-			return  String.join("", Files.readAllLines(Paths.get("src/main/resources/test_coordinates" +
-					".json"), StandardCharsets.UTF_8));
+			return String.join("", Files.readAllLines(Paths.get("src/main/resources/test_coordinates"
+					+ ".json"), StandardCharsets.UTF_8));
 		} catch (IOException e) {
 			LOG.warn("Could not read json file", e);
 		}
@@ -148,9 +147,9 @@ public class InitializeDatabaseLocal implements InitializingBean {
 		return Collections.emptyList();
 	}
 
-	private List<Coordinate> createDoorCoordinates(String jsonContent) {
+	private List<List<Coordinate>> createDoorCoordinates(String jsonContent) {
 		try {
-			return GeoJsonParser.parsePointsFromGeoJson(jsonContent);
+			return GeoJsonParser.parseLinesFromGeoJson(jsonContent);
 		} catch (JsonProcessingException e) {
 			LOG.warn("Coordination Data could not be initialized", e);
 		}
